NACL.tf
resource "aws_network_acl" "i-one_vpc_nacl" {
        vpc_id = aws_vpc.main.id
}
